--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,7 +21,6 @@ header#hello {
   height: 10vh;
   justify-content: center;
   align-items: center;
-  color: whitesmoke;
   background-color: #ea7317;
 }
 header#hello h1 {
@@ -46,6 +45,13 @@ div.weather-board {
   background-color: #2364aa;
 }
 
+h1.greeting {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 3rem;
+  color: whitesmoke;
+}
+
 div.weather-cards {
   display: flex;
   height: 80vh;
@@ -53,6 +59,7 @@ div.weather-cards {
   justify-content: space-around;
   align-items: center;
   max-width: 1024px;
+  margin: auto;
 }
 div.weather-cards div.weather-card {
   display: flex;
@@ -65,11 +72,23 @@ div.weather-cards div.weather-card {
   border: #cbe7e4 solid 0.2rem;
   border-radius: 10%;
   background-color: #489e96;
-  margin: auto;
 }
 div.weather-cards div.weather-card img {
   width: 8rem;
   height: 8rem;
+}
+div.weather-cards div.error-box {
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+div.weather-cards div.error-box h1 {
+  font-size: 2rem;
+}
+div.weather-cards div.error-box img {
+  max-width: 7rem;
+  max-height: 7rem;
 }
 
 div.search-bar {
@@ -80,10 +99,6 @@ div.search-bar {
   align-items: center;
   justify-content: center;
   background-color: #fec601;
-}
-
-h3 {
-  font-size: 1.5rem;
 }
 
 form.search-bar {
