--- a/src/sass/layout/base.sass
+++ b/src/sass/layout/base.sass
@@ -1,7 +1,10 @@
+@import '../mfv/_mfv'
+    
 body, html
     font-size: 62.5%
     height: 100vh
     overflow-x: hidden
+    background-color: $lapiz
 *
     padding: 0
     margin: 0
