--- a/src/sass/layout/header.sass
+++ b/src/sass/layout/header.sass
@@ -4,6 +4,7 @@ header#hello
     display: flex
     width: 100vw
     height: 10vh
+    min-height: 5rem
     justify-content: center
     align-items: center
     background-color: $tango
