--- a/src/css/layout/search.css
+++ b/src/css/layout/search.css
@@ -1,6 +1,7 @@
 div.search-bar {
   width: 100vw;
   height: 10vh;
+  min-height: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,11 +13,13 @@ form.search-bar {
   display: flex;
   height: 90%;
   width: 90vw;
+  min-height: 5rem;
   max-width: 1000px;
   padding: 1rem 0;
 }
 form.search-bar input {
   height: 100%;
+  min-height: 5rem;
   width: 70%;
   border-top-left-radius: 2.5rem;
   border-bottom-left-radius: 2.5rem;
@@ -27,6 +30,7 @@ form.search-bar button {
   background-color: #3da5d9;
   border: 0;
   height: 100%;
+  height-min-height: 5rem;
   width: 30%;
   border-top-right-radius: 2.5rem;
   border-bottom-right-radius: 2.5rem;
