--- a/src/sass/layout/card.sass
+++ b/src/sass/layout/card.sass
@@ -18,7 +18,8 @@ h1.greeting
     
 div.weather-cards
     display: flex
-    height: 80vh
+    height: 100%
+    min-height: 50vh
     flex-wrap: wrap
     justify-content: space-around
     align-items: center
