--- a/src/sass/layout/search.sass
+++ b/src/sass/layout/search.sass
@@ -4,6 +4,7 @@
 div.search-bar
     width: 100vw
     height: 10vh
+    min-height: 5rem
     display: flex
     flex-direction: column
     align-items: center
@@ -14,11 +15,13 @@ form.search-bar
     display: flex
     height: 90%
     width: 90vw
+    min-height: 5rem
     max-width: 1000px
     padding: 1rem 0
    
     input
         height: 100%
+        min-height: 5rem
         width: 70%
         border-top-left-radius: 2.5rem
         border-bottom-left-radius: 2.5rem
@@ -29,6 +32,7 @@ form.search-bar
         background-color: $maxblue
         border: 0
         height: 100%
+         min-height: 5rem
         width: 30%
         border-top-right-radius: 2.5rem
         border-bottom-right-radius: 2.5rem
