--- a/src/sass/layout/card.sass
+++ b/src/sass/layout/card.sass
@@ -25,6 +25,7 @@ div.weather-cards
     align-items: center
     max-width: 1024px
     margin: auto
+    padding: 10rem 0
     div.weather-card
         display: flex
         flex-basis: 45%
