--- a/src/sass/layout/card.sass
+++ b/src/sass/layout/card.sass
@@ -26,6 +26,7 @@ div.weather-cards
     max-width: 1024px
     margin: auto
     div.weather-card
+        margin: 1rem 0
         display: flex
         flex-basis: 45%
         height: 30%
